correction grip-gap

--- a/style.css
+++ b/style.css
@@ -141,8 +141,8 @@ body {
       "h b i c c"
       "j k d d l"
       "m n d d o";
-      width: 100%; /
-      gap:30px;
+      width: 100%; 
+      grid-gap:30px;
  
   }
   
